@@ -50,9 +50,9 @@ typedef struct
 GType        	 	 xfpm_adapter_get_type        (void) G_GNUC_CONST;
 XfpmAdapter      	*xfpm_adapter_new             (void);
 
-gboolean 	  	 xfpm_adapter_get_present     (XfpmAdapter *adapter);
+gboolean 	  	 xfpm_adapter_get_present     (XfpmAdapter *adapter) G_GNUC_PURE;
 
-gboolean 		 xfpm_adapter_has_hw 	      (XfpmAdapter *adapter);
+gboolean 		 xfpm_adapter_has_hw 	      (XfpmAdapter *adapter) G_GNUC_PURE;
 
 G_END_DECLS
 
