@@ -47,7 +47,7 @@ typedef struct
 GType			         xfpm_backlight_get_type        (void) G_GNUC_CONST;
 XfpmBacklight       		*xfpm_backlight_new             (void);
 
-gboolean                         xfpm_backlight_has_hw          (XfpmBacklight *bk);
+gboolean                         xfpm_backlight_has_hw          (XfpmBacklight *bk) G_GNUC_PURE;
 
 G_END_DECLS
 
