@@ -47,7 +47,7 @@ typedef struct
 GType        				xfpm_brightness_hal_get_type        (void) G_GNUC_CONST;
 XfpmBrightnessHal      		       *xfpm_brightness_hal_new             (void);
 
-gboolean                                xfpm_brightness_hal_has_hw          (XfpmBrightnessHal *brg);
+gboolean                                xfpm_brightness_hal_has_hw          (XfpmBrightnessHal *brg) G_GNUC_PURE;
 void                                    xfpm_brightness_hal_update_level    (XfpmBrightnessHal *brg,
 									     guint level);
 G_END_DECLS
