@@ -1,4 +1,7 @@
 
+2009-03-24 16:18 Ali aliov@xfce.org 
+	 * : Generate random cookie on the inhibit+some optimizations
+
 2009-03-24 16:09 Ali aliov@xfce.org 
 	 * : Fix a crash in the brightness plugin when no device found
 
